Update repository URLs and user information

--- a/packages/git/.gitconfig
+++ b/packages/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name       = edm20627
-	email      = eng00627@gmail.com
+	name  = keethii27
+	email = eng00627@gmail.com
 
 [alias]
 	s   = status -sb
