.gitconfigからlfsを削除

--- a/packages/git/.gitconfig
+++ b/packages/git/.gitconfig
@@ -18,13 +18,15 @@
 	f   = fetch
 	fup = fetch upstream
 
-[filter "lfs"]
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
-	clean = git-lfs clean -- %f
-
 [init]
 	defaultBranch = main
+
 [pull]
+    rebase = true
 	autostash = true
+
+[push]
+    default = current
+
+[rebase]
+	autoStash = true
